# -

./: .gitignore  0start.bat  CMakeLists.txt  RevoltEngine.lnk  git (PowerShell).txt  git.bat  структура проекта (шпаргалка).txt  структура проекта.txt
Revolt_0/: 0start.bat  Revolt.py  start.bat
Revolt_0/myenv/Scripts/: activate  activate.bat
assets/: demo_scene.json  demo_scene0.json  demo_scene1.json  demo_scene2.json  demo_scene3.json  demo_scene4.json  demo_scene5.json  demo_scene6.json  gena_scene.json  sexsymbolof2025.mdl  настройки камеры.txt
assets/models/: gena.mdl  sexsymbolof1998.mdl
src/: main.cpp  main_old.cpp
src/core/: Application.cpp  Application.h  GameObject.cpp  GameObject.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  Window.cpp  Window.h
src/graphics/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  MDLMesh.cpp  MDLMesh.h  MDLModel.cpp  MDLModel.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  TextRenderer.cpp  TextRenderer.h
src/math/: Matrix4.cpp  Matrix4.h
